# mrmlgo

./: .gitignore  Makefile  README.md  go.mod  mrmlgo.go
examples/simple/: main.go
mrml-capi/: Cargo.toml  build.rs  cbindgen.toml
mrml-capi/include/: mrml-capi.h
mrml-capi/src/: lib.rs
